Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24221

C++: Lexer "freezes" when parsing a project

XMLWordPrintable

    • Windows
    • 538b09775615846b881682a3d5faa10974da8f88 (qt-creator/qt-creator/master)

      The fix for QTCREATORBUG-19525 caused that the Parsing C/C++ files step after opening a project apparently freezes.

      See the attached stacktrace.txt from ofe of the running threads.

        1. image-2020-06-22-14-11-54-921.png
          62 kB
          Alessandro Portale
        2. stacktrace.txt
          63 kB
          Alessandro Portale
        For Gerrit Dashboard: QTCREATORBUG-24221
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes