Lexer: Fine-tune recent crash fix

Use the original offset only in the one place where it is relevant.
This amends commit 8eac3fba80.

Fixes: QTCREATORBUG-24221
Change-Id: Idcfc5ecc8a76c875c4f2ca5890d0ba95ce52a6e9
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>